--- a/notebooks/ccd_data_exploration.ipynb
+++ b/notebooks/ccd_data_exploration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,17 +17,19 @@
     "import sys\n",
     "sys.path.append('/home/simon/files/client/ccd/ccd-data-cleaning/')\n",
     "\n",
-    "%matplotlib inline\n",
-    "%autoreload"
+    "%load_ext autoreload\n",
+    "%autoreload\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ccd.utils import read_layers_from_gdb"
+    "from ccd.utils import read_layers_from_gdb\n",
+    "from ccd.parking_zone_evaluator import ParkingZoneEvaluator"
    ]
   },
   {
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,14 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sample_uuid = '{8EDBF341-6399-4A77-B90E-D4E34425145E}'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,13 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "pz = layers['Parking_Zones']\n",
-    "pza = layers['Parking_Zones__ATTACH']\n",
-    "pzr = layers['Parking_Zone_Regulations']"
+    "pzr = layers['Parking_Zone_Regulations']\n",
+    "pza = layers['Parking_Zones__ATTACH']"
    ]
   }
  ],
