--- a/notebooks/questions.ipynb
+++ b/notebooks/questions.ipynb
@@ -11,14 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Where do the numbers start for days in `pvr['Day_{from|to}_{1|2}']`\n",
-    "- What's the story witht the values for `PermitZone1`, `PermitZone2`, and `PermitException` in `pvr`, how do I go from that to **Permit Zone** in the output dataset?\n"
+    "- Where do the numbers start for days in `pvr['Day_{from|to}_{1|2}']`?\n",
+    "- What's the story witht the values for `PermitZone1`, `PermitZone2`, and `PermitException` in `pvr`, how do I go from that to **Permit Zone** in the output dataset?\n",
+    "- What do the time values of `9910`, `9911` and `102` mean?\n",
+    "- Let's talk a little bit about `reg_is` and `reg_is_not` how do you distibguish these two?\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
