--- a/notebooks/todo.ipynb
+++ b/notebooks/todo.ipynb
@@ -17,11 +17,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "    [ ] incorporate `notes`\n",
+    "    [ ] incorporate `RegCats`\n",
+    "    [ ] export all images as .pngs (one-off script)\n",
+    "    [ ] revisit 'Permit Zone' field\n",
+    "    [ ] figure out what to do about placard\n",
+    "    [ ] why are regs showing up multiple times \n",
+    "    [ ] incorporate the `time_limit` field\n",
+    "    [ ] reorganize columns"
+   ]
   }
  ],
  "metadata": {
