changes to rule class

--- a/notebooks/questions.ipynb
+++ b/notebooks/questions.ipynb
@@ -11,11 +11,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- I just created the `paid` column using the `Metering` column in `pz`. \n",
+    "    - There are four unique values in this column: 'Kiosk', 'Meters', 'No Meters' and None. I mapped 'Kiosk' and 'Meters' to `paid=Yes` and 'No Meters' nd None to `paid=No`. Is this right?\n",
+    "- What is the deal with the proposed `permit_zone` field?\n",
+    "    - In the spreadsheet it is a number\n",
+    "    - There are two 'PermitZone' columns in `pz`\n",
+    "    - In `PermitZone1` there are 118 non-null values (5 different permit zones)\n",
+    "    - In `PermitZone2` there is only one non-null value (zone 4 in a row that doesn't have `PermitZone1` specified\n",
+    "    - `PermitException` has no null values. It has 129 'Yes' values and 3220 'No' values\n",
+    "    - Most of the columns that have a 'Yes' value for `PermitException` have a value for `PermitZone1`\n",
+    "- Where do I get `contractor placard` from?\n",
+    "    - In the notes section of the regulations dataset, only two notes contain the word 'placard' and none contain the word 'contractor'\n",
+    "    - There is one regulation that mentions 'contractor placard': 'Contractor Placard Not Valid' (this reg occurs 384)\n",
+    "    - I set the value of all hours overlapping with this regulation to 'Not Valid'\n",
+    "- How should I create the `Time Limit` column?\n",
+    "    - Time limits are tied to regulations so there could be more than one time limit per segment. \n",
+    "\n",
     "- Where do the numbers start for days in `pvr['Day_{from|to}_{1|2}']`?\n",
     "- What's the story witht the values for `PermitZone1`, `PermitZone2`, and `PermitException` in `pvr`, how do I go from that to **Permit Zone** in the output dataset?\n",
     "- What do the time values of `9910`, `9911` and `102` mean?\n",
-    "- Let's talk a little bit about `reg_is` and `reg_is_not` how do you distibguish these two?\n"
+    "- Let's talk a little bit about `reg_is` and `reg_is_not` how do you distibguish these two?\n",
+    "- What does the note `tpp` mean? it occurs 62 times, far more than any other note\n",
+    "- What does the note `In This Street` mean? it occurs 12 times\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
