refactor parking hour

--- a/notebooks/todo.ipynb
+++ b/notebooks/todo.ipynb
@@ -24,11 +24,25 @@
     "    [ ] incorporate `RegCats`\n",
     "    [ ] export all images as .pngs (one-off script)\n",
     "    [ ] revisit 'Permit Zone' field\n",
-    "    [ ] figure out what to do about placard\n",
-    "    [ ] why are regs showing up multiple times \n",
-    "    [ ] incorporate the `time_limit` field\n",
+    "    [X] figure out what to do about placard\n",
+    "    [X] why are regs showing up multiple times \n",
+    "    [X] incorporate the `time_limit` field\n",
     "    [ ] reorganize columns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    [ ] unit tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
