testparking time and utils

--- a/notebooks/questions.ipynb
+++ b/notebooks/questions.ipynb
@@ -28,11 +28,19 @@
     "    - Time limits are tied to regulations so there could be more than one time limit per segment. \n",
     "\n",
     "- Where do the numbers start for days in `pvr['Day_{from|to}_{1|2}']`?\n",
+    "    - It seems like it goes from Monday (1) to Sunday (7)\n",
     "- What's the story witht the values for `PermitZone1`, `PermitZone2`, and `PermitException` in `pvr`, how do I go from that to **Permit Zone** in the output dataset?\n",
     "- What do the time values of `9910`, `9911` and `102` mean?\n",
-    "- Let's talk a little bit about `reg_is` and `reg_is_not` how do you distibguish these two?\n",
+    "    - It seems as if `9911` is 'all time'\n",
+    "    - It seems like `9910` is 'school hours' (occurs for one regulation) and the day value of '888' is school days (occurs for two different regulations)\n",
+    "- What do the day values of `999` and `888` mean?\n",
+    "    - `888` seems like it is school days\n",
+    "    - not sure what `999` is\n",
+    "- Let's talk a little bit about `reg_is` and `reg_is_not` how do you distinguish these two?\n",
+    "    - basically I just split the regulations into two different categories based on intuition\n",
     "- What does the note `tpp` mean? it occurs 62 times, far more than any other note\n",
-    "- What does the note `In This Street` mean? it occurs 12 times\n"
+    "- What does the note `In This Street` mean? it occurs 12 times\n",
+    "- What's the story with 'missing values'?\n"
    ]
   },
   {
