fill in default values

--- a/notebooks/todo.ipynb
+++ b/notebooks/todo.ipynb
@@ -27,7 +27,7 @@
     "    [X] figure out what to do about placard\n",
     "    [X] why are regs showing up multiple times \n",
     "    [X] incorporate the `time_limit` field\n",
-    "    [ ] reorganize columns"
+    "    [X] reorganize columns"
    ]
   },
   {
@@ -36,13 +36,6 @@
    "source": [
     "    [ ] unit tests"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
